# bio_params

./: .gitignore  pyproject.toml
data/: README.md
data/bgc_argo/: README.md
data/glodap/: README.md
data/shizugawa/: README.md
deploy/synology/: Dockerfile  README.md  cmems.env.example  mirror_sync.sh
models/pretrained/: bgc_argo_Chla.pt  bgc_argo_Chla_rel.pt  bgc_argo_Chla_satchl.pt  bgc_argo_O2.pt  (+41 more)
porting/: export_weights.py  inference.py
scripts/: ablation_features.py  analyze_chla_zero_depth.py  analyze_doc_residuals.py  build_chla_base_profile.py  build_satellite_climatology.py  compare_daily_monthly_satellite.py  compare_roms_chla_models.py  compare_roms_combined_vs_bgc.py  download_bgc_argo.py  download_glodap.py  download_satellite_chla.py  eval_chla_scoreboard.py  explore_chla_maxbin.py  explore_doc.py  explore_doc_predictors.py  extract_fora_glodap_matchup.py  fill_climatology_gaps.py  inspect_glodap.py  match_satellite_chla.py  match_satellite_chla_daily.py  mirror_satellite_daily.py  plot_base_profile_spread.py  plot_bgc_argo_coverage.py  plot_bgc_argo_predictions.py  plot_chla_surface_anchor_scatter.py  plot_combined_predictions.py  plot_doc_outliers_map.py  plot_ecs_salinity_nutrients.py  plot_fora_chla_section.py  plot_fora_glodap_21site_map.py  plot_fora_glodap_21site_profiles.py  plot_fora_glodap_8var_sites.py  plot_fora_glodap_deep_profiles.py  plot_fora_glodap_ecs_soj_profiles.py  plot_fora_glodap_scatter.py  plot_fora_glodap_site_profiles.py  plot_fora_surface.py  plot_gated_predictions.py  plot_glodap_coverage.py  plot_no3_po4_redfield.py  (+19 more)
(+13 files in other folders)
